z-index overlaps fix

--- a/src/scss/BurgerButton.scss
+++ b/src/scss/BurgerButton.scss
@@ -46,5 +46,6 @@
 @media screen and (max-width: 786px) {
   .burger {
     display: flex;
+    z-index: 1;
   }
 }
