--- a/src/scss/Overlay.scss
+++ b/src/scss/Overlay.scss
@@ -2,11 +2,13 @@
   display: none;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   position: fixed;
-  width: 100%;
-  height: 100%;
+
   &.active {
     opacity: 1;
+    z-index: 10;
     // background-color: #00000080;
     display: grid;
     place-items: center;
